added exception handling for unimplemented parts of the API

--- a/src/main/resources/error-properties.properties
+++ b/src/main/resources/error-properties.properties
@@ -12,3 +12,4 @@ java.sql.SQLException=300000
 #business errors 400000
 com.deloitte.productapi.exceptions.ProductNotFoundException=400000
 com.deloitte.productapi.exceptions.NoProductsFoundException=400001
+com.deloitte.crm.exceptions.APINotImplementedException=400002
